=====================================================================
	Change Log
	phpGedView

	This and other information can be found online at
	http://www.phpgedview.net

	# $Id$
=====================================================================


Version 4.2.0
 - Fixed: [ 2475261 ] client.php?action=getxref&position=all fails (fisharebest)
 - Fixed: [ 2474873 ] User Journal entry gets added as GEDCOM News article (canajun2eh)
 - Changed: Removed "Skip Cleanup" button on Upload GEDCOM page (canajun2eh)
 - Fixed: [ 2474045 ] Several problems when uploading GEDCOM (canajun2eh)
 - Fixed: [ 2474040 ] "Upload GEDCOM" option in Setup wizard doesn't work (canajun2eh)
 - Fixed: [ 2473198 ] Logout doesn't go back to default GEDCOM (canajun2eh)
 - Fixed: [ 2461403 ] Configured default language not being used (canajun2eh)
 - Fixed: [ 2459204 ] unable to update with GDBI (fisharebest)
 - Added: [ 2154522 ] SMTP w/ phpMailer [followup to 1869063] (wooc)
 - Added: [ 1869063 ] SMTP mail via PHPMailer added to functions_mail.php (wooc)
 - Fixed: [ 2457278 ] Advanced search doesn't work right (canajun2eh)
 - Fixed: Quick Update, Edit Name, and Add Person forms don't obey "Surname First" option (canajun2eh)
 - Fixed: Help for Hebrew and Romanized Names in Quick Update form need improvement (canajun2eh)
 - Changed: Remove "Use RTL Functions" option in GEDCOM configuration (canajun2eh) 
 - Fixed: [ 2454091 ] Error 8 in Indi list (canajun2eh)
 - Fixed: [ 2445781 ] 4559 Events of close relatives (wooc)
 - Fixed: Incorrect Default Audio thumbnail showing when on Mediaviewer or Medialist pages with mp3 media (windmillway)
 - Fixed: [ 2388981 ] gdbi fails with 4.1.6 (fisharebest)
 - Changed: Album Tab: Fixed and Reinstated inline Media sort. (windmillway)
 - Fixed: Advanced Search "Add More Fields" option doesn't work in IE (canajun2eh) 
 - Added: [ 2271529 ] Export gedcom to index directory (fisharebest)
 - Fixed: [ 2432314 ] client.php 4498 inconsistency (fisharebest)